# hhcc

src/hhcc/: CMakeLists.txt  package.xml
src/hhcc/launch/: find_block.launch
src/hhcc/scripts/: find_block.py
src/hhcc_challenge/: CMakeLists.txt  package.xml
src/hhcc_challenge/launch/: run.launch
src/hhcc_challenge/scripts/: move.py  simple_pick.py  simple_pick_2.py  simple_pick_3.py
src/hhcc_sample_recog/: CMakeLists.txt  package.xml
src/hhcc_sample_recog/launch/: find_red_object.launch
src/hhcc_sample_recog/scripts/: find_red_object.py
